--- a/Computing II/Homework/Homework 7.ipynb
+++ b/Computing II/Homework/Homework 7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -131,31 +131,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The - the: DET\n",
-      "quick - quick: ADJ\n",
-      "brown - brown: ADJ\n",
-      "fox - fox: NOUN\n",
-      "does - do: AUX\n",
-      "n't - not: PART\n",
-      "jump - jump: VERB\n",
-      "over - over: ADP\n",
-      "the - the: DET\n",
-      "lazy - lazy: ADJ\n",
-      "dog - dog: NOUN\n",
-      ". - .: PUNCT\n",
-      "Natural - Natural: PROPN\n",
-      "Language - Language: PROPN\n",
-      "Processing - processing: NOUN\n",
-      "is - be: AUX\n",
-      "fascinating - fascinating: ADJ\n",
-      "! - !: PUNCT\n",
       "The - the - POS: DET, Tag: DT\n",
       "quick - quick - POS: ADJ, Tag: JJ\n",
       "brown - brown - POS: ADJ, Tag: JJ\n",
@@ -178,11 +160,6 @@
     }
    ],
    "source": [
-    "#WHICH TO USE\n",
-    "#ask if the \"is.\" period is an error\n",
-    "for token in doc:\n",
-    "    print(f\"{token.text} - {token.lemma_}: {token.pos_}\")\n",
-    "\n",
     "for token in doc:\n",
     "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.tag_}\")\n"
    ]
@@ -198,7 +175,7 @@
     "- \"is\" POS tag: AUX (auxiliary verb)\n",
     "\n",
     "2. **Why might POS tagging be useful for tasks like grammar checking or machine translation?**\n",
-    "- One of the main features of POS tagging is th"
+    "- One of the main features of POS tagging is that it can identify the type of a word (ex: noun, verb, adjective) and therefore its role in sentence to predict what may be coming next. For example, a machine learning model, might be able to predict that after an adjective a noun is likely. Other features like token.is_stop, can help identify the tokens in a doc that are hold information and therefore are more valauble in machine learning models."
    ]
   },
   {
@@ -212,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +236,6 @@
     }
    ],
    "source": [
-    "#ASK WHY THE IS TAKEN AS A ENTITY\n",
-    "#does q2 of the writtehn part need to be answer using code? tokens.properties\n",
     "text = (\"\"\"Barack Obama was the 44th President of the United States. He was born in Hawaii.\"\"\")\n",
     "\n",
     "#tokenize\n",
@@ -304,48 +279,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Despite - POS: despite, Tag: SCONJ\n",
-      "I - POS: I, Tag: PRON\n",
-      "lovd - POS: lovd, Tag: VERB\n",
-      "my - POS: my, Tag: PRON\n",
-      "semester - POS: semester, Tag: NOUN\n",
-      "abroad - POS: abroad, Tag: ADV\n",
-      "in - POS: in, Tag: ADP\n",
-      "London - POS: London, Tag: PROPN\n",
-      "and - POS: and, Tag: CCONJ\n",
-      "traveling - POS: travel, Tag: VERB\n",
-      "around - POS: around, Tag: ADP\n",
-      "Europe - POS: Europe, Tag: PROPN\n",
-      ", - POS: ,, Tag: PUNCT\n",
-      "I - POS: I, Tag: PRON\n",
-      "really - POS: really, Tag: ADV\n",
-      "missed - POS: miss, Tag: VERB\n",
-      "Football - POS: Football, Tag: PROPN\n",
-      "season - POS: season, Tag: NOUN\n",
-      "at - POS: at, Tag: ADP\n",
-      "Notre - POS: Notre, Tag: PROPN\n",
-      "Dame - POS: Dame, Tag: PROPN\n",
-      "Entity: London, Label: GPE\n",
-      "Entity: Europe, Label: LOC\n",
-      "Entity: Notre Dame, Label: FAC\n"
+      "Despite - despite - POS: SCONJ, Tag: SCONJ {'prep'}\n",
+      "loving - love - POS: VERB, Tag: VERB {'pcomp'}\n",
+      "my - my - POS: PRON, Tag: PRON {'poss'}\n",
+      "semester - semester - POS: NOUN, Tag: NOUN {'dobj'}\n",
+      "abroad - abroad - POS: ADV, Tag: ADV {'advmod'}\n",
+      "in - in - POS: ADP, Tag: ADP {'prep'}\n",
+      "London - London - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "and - and - POS: CCONJ, Tag: CCONJ {'cc'}\n",
+      "the - the - POS: DET, Tag: DET {'det'}\n",
+      "opportunity - opportunity - POS: NOUN, Tag: NOUN {'conj'}\n",
+      "to - to - POS: PART, Tag: PART {'aux'}\n",
+      "travel - travel - POS: VERB, Tag: VERB {'acl'}\n",
+      "around - around - POS: ADP, Tag: ADP {'prep'}\n",
+      "Europe - Europe - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "I - I - POS: PRON, Tag: PRON {'nsubj'}\n",
+      "really - really - POS: ADV, Tag: ADV {'advmod'}\n",
+      "missed - miss - POS: VERB, Tag: VERB {'ROOT'}\n",
+      "Football - Football - POS: PROPN, Tag: PROPN {'compound'}\n",
+      "season - season - POS: NOUN, Tag: NOUN {'dobj'}\n",
+      "at - at - POS: ADP, Tag: ADP {'prep'}\n",
+      "Notre - Notre - POS: PROPN, Tag: PROPN {'compound'}\n",
+      "Dame - Dame - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "London: GPE (Countries, cities, states)\n",
+      "Europe: LOC (Non-GPE locations, mountain ranges, bodies of water)\n",
+      "Notre Dame: FAC (Buildings, airports, highways, bridges, etc.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Text with no errors\n",
+    "text = \"Despite loving my semester abroad in London and the opportunity to travel around Europe I really missed Football season at Notre Dame\"\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "\n",
+    "for token in doc:\n",
+    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}\", {token.dep_})\n",
+    "\n",
+    "for ent in doc.ents:\n",
+    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Despite - despite - POS: SCONJ, Tag: SCONJ {'prep'}\n",
+      "lving - lve - POS: VERB, Tag: VERB {'pcomp'}\n",
+      "my - my - POS: PRON, Tag: PRON {'poss'}\n",
+      "time - time - POS: NOUN, Tag: NOUN {'dobj'}\n",
+      "abroad - abroad - POS: ADV, Tag: ADV {'advmod'}\n",
+      "in - in - POS: ADP, Tag: ADP {'prep'}\n",
+      "London - London - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "and - and - POS: CCONJ, Tag: CCONJ {'cc'}\n",
+      "the - the - POS: DET, Tag: DET {'det'}\n",
+      "opportunity - opportunity - POS: NOUN, Tag: NOUN {'conj'}\n",
+      "to - to - POS: PART, Tag: PART {'aux'}\n",
+      "travel - travel - POS: VERB, Tag: VERB {'acl'}\n",
+      "around - around - POS: ADP, Tag: ADP {'prep'}\n",
+      "Europe - Europe - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      ", - , - POS: PUNCT, Tag: PUNCT {'punct'}\n",
+      "I - I - POS: PRON, Tag: PRON {'nsubj'}\n",
+      "really - really - POS: ADV, Tag: ADV {'advmod'}\n",
+      "missed - miss - POS: VERB, Tag: VERB {'ROOT'}\n",
+      "Football - Football - POS: PROPN, Tag: PROPN {'compound'}\n",
+      "season - season - POS: NOUN, Tag: NOUN {'dobj'}\n",
+      "at - at - POS: ADP, Tag: ADP {'prep'}\n",
+      "Notre - Notre - POS: PROPN, Tag: PROPN {'compound'}\n",
+      "Dame - Dame - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "London: GPE (Countries, cities, states)\n",
+      "Europe: LOC (Non-GPE locations, mountain ranges, bodies of water)\n",
+      "Notre Dame: FAC (Buildings, airports, highways, bridges, etc.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#Text with typo (lving should be loving), semster changed to time and added comma after Europe\n",
+    "text1 = \"Despite lving my time abroad in London and the opportunity to travel around Europe, I really missed Football season at Notre Dame\"\n",
+    "doc1 = nlp(text1)\n",
+    "\n",
+    "for token in doc1:\n",
+    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}\", {token.dep_})\n",
+    "\n",
+    "for ent in doc1.ents:\n",
+    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Text:\n"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Despite I lovd my semester abroad in \n",
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Despite loving my semester abroad in \n",
        "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    London\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
        "</mark>\n",
-       " and traveling around \n",
+       " and the opportunity to travel around \n",
+       "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Europe\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
+       "</mark>\n",
+       " I really missed Football season at \n",
+       "<mark class=\"entity\" style=\"background: #9cc9cc; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Notre Dame\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">FAC</span>\n",
+       "</mark>\n",
+       "</div></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Altered Text:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Despite lving my time abroad in \n",
+       "<mark class=\"entity\" style=\"background: #feca74; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    London\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">GPE</span>\n",
+       "</mark>\n",
+       " and the opportunity to travel around \n",
        "<mark class=\"entity\" style=\"background: #ff9561; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    Europe\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">LOC</span>\n",
@@ -366,19 +453,15 @@
     }
    ],
    "source": [
-    "#Text with typo (lovd should be loved)\n",
-    "text = \"Despite I lovd my semester abroad in London and traveling around Europe, I really missed Football season at Notre Dame\"\n",
-    "doc = nlp(text)\n",
-    "\n",
-    "for token in doc:\n",
-    "    print(f\"{token.text} - POS: {token.lemma_}, Tag: {token.pos_}\")\n",
-    "\n",
-    "for ent in doc.ents:\n",
-    "    print(f\"Entity: {ent.text}, Label: {ent.label_}\")\n",
-    "\n",
-    "#Better Presentation using Displacy\n",
+    "#Comparison\n",
+    "print(\"Original Text:\")\n",
     "from spacy import displacy\n",
-    "displacy.render(doc, style='ent', jupyter=True)\n"
+    "displacy.render(doc, style='ent', jupyter=True)\n",
+    "\n",
+    "\n",
+    "print(\"Altered Text:\")\n",
+    "from spacy import displacy\n",
+    "displacy.render(doc1, style='ent', jupyter=True)\n"
    ]
   },
   {
@@ -388,10 +471,10 @@
     "### Questions to Answer in Comments:\n",
     "\n",
     "1. **How does spaCy handle your modifications?**\n",
-    "\n",
+    "- Despite having a typo in the word loving, the POS features are able to identify that it still is a prepositional complement dependency and tehrefore whould be followed by another sentence. The word chnage from semseter to time was also picked up and identified as a noun. Lastly, the pucntuation added was also documented by spaCy as a puntuation.\n",
     "\n",
     "2. **Did any entities or tags change? Why might this happen?**\n",
-    "  "
+    "- Given that the changes made to the text didn't alter the menaing of the sentence, none of the tags or entities cheanged (as shown in the output above)"
    ]
   }
  ],
