add code comment homework 7

--- a/Computing II/Homework/Homework 7.ipynb
+++ b/Computing II/Homework/Homework 7.ipynb
@@ -160,8 +160,16 @@
     }
    ],
    "source": [
-    "for token in doc:\n",
-    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.tag_}\")\n"
+    "#Part of speeach tagging added to tokens\n",
+    "for token in doc: #for loop will go through each token and asign a text, lemma, pos_ and tag_ feature to each\n",
+    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.tag_}\") \n",
+    "    \n",
+    "#POS Features\n",
+    "#token.text - shows original token\n",
+    "#token.lemma_ - shows simplest version of word (root form)\n",
+    "#token.pos_ - shows the core Universal Part Of Speech (UPOS) category of the word (noun, verb, adjective)\n",
+    "#token.tag_ - Fine grained tag (more specific part of category defined in token.pos_)\n",
+    "    # ex: token.text = walked, token.pos_: verb, token.tag_: past tense verb\n"
    ]
   },
   {
@@ -243,12 +251,13 @@
     "tokens= [token.text for token in doc] #this puts it in a list \n",
     "\n",
     "# Display named entities in the text\n",
-    "for ent in doc.ents:\n",
-    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\")\n",
+    "# doc.ents contains only the named entities This ensures we are not looping through all tokens, just the recognized entities\n",
+    "for ent in doc.ents: \n",
+    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\") ## Print each entity's text, label, and explanation of the label\n",
     "\n",
     "#Better Presentation using Displacy\n",
     "from spacy import displacy\n",
-    "displacy.render(doc, style='ent', jupyter=True)\n",
+    "displacy.render(doc, style='ent', jupyter=True) #style='ent' will highlight entities, suing a differnet color for each category (ex: purple for person, white for ordinal, yellow for GPE)\n",
     "\n"
    ]
   },
@@ -264,7 +273,7 @@
     "\n",
     "2. **What entity types are assigned to \"Barack Obama\" and \"Hawaii\"?**\n",
     "    Hint: Use token.label_ properties\n",
-    "- Barack Obama: PERSON\n",
+    "- Barack Obama: PERSON (People, including fictional)\n",
     "- Hawaii: GPE (Geopolitical entity: countries, cities, states, etc)"
    ]
   },
@@ -279,35 +288,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Despite - despite - POS: SCONJ, Tag: SCONJ {'prep'}\n",
-      "loving - love - POS: VERB, Tag: VERB {'pcomp'}\n",
-      "my - my - POS: PRON, Tag: PRON {'poss'}\n",
-      "semester - semester - POS: NOUN, Tag: NOUN {'dobj'}\n",
-      "abroad - abroad - POS: ADV, Tag: ADV {'advmod'}\n",
-      "in - in - POS: ADP, Tag: ADP {'prep'}\n",
-      "London - London - POS: PROPN, Tag: PROPN {'pobj'}\n",
-      "and - and - POS: CCONJ, Tag: CCONJ {'cc'}\n",
-      "the - the - POS: DET, Tag: DET {'det'}\n",
-      "opportunity - opportunity - POS: NOUN, Tag: NOUN {'conj'}\n",
-      "to - to - POS: PART, Tag: PART {'aux'}\n",
-      "travel - travel - POS: VERB, Tag: VERB {'acl'}\n",
-      "around - around - POS: ADP, Tag: ADP {'prep'}\n",
-      "Europe - Europe - POS: PROPN, Tag: PROPN {'pobj'}\n",
-      "I - I - POS: PRON, Tag: PRON {'nsubj'}\n",
-      "really - really - POS: ADV, Tag: ADV {'advmod'}\n",
-      "missed - miss - POS: VERB, Tag: VERB {'ROOT'}\n",
-      "Football - Football - POS: PROPN, Tag: PROPN {'compound'}\n",
-      "season - season - POS: NOUN, Tag: NOUN {'dobj'}\n",
-      "at - at - POS: ADP, Tag: ADP {'prep'}\n",
-      "Notre - Notre - POS: PROPN, Tag: PROPN {'compound'}\n",
-      "Dame - Dame - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "Despite - despite - POS: SCONJ, Tag: SCONJ, Dependency: prep\n",
+      "loving - love - POS: VERB, Tag: VERB, Dependency: pcomp\n",
+      "my - my - POS: PRON, Tag: PRON, Dependency: poss\n",
+      "semester - semester - POS: NOUN, Tag: NOUN, Dependency: dobj\n",
+      "abroad - abroad - POS: ADV, Tag: ADV, Dependency: advmod\n",
+      "in - in - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "London - London - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
+      "and - and - POS: CCONJ, Tag: CCONJ, Dependency: cc\n",
+      "the - the - POS: DET, Tag: DET, Dependency: det\n",
+      "opportunity - opportunity - POS: NOUN, Tag: NOUN, Dependency: conj\n",
+      "to - to - POS: PART, Tag: PART, Dependency: aux\n",
+      "travel - travel - POS: VERB, Tag: VERB, Dependency: acl\n",
+      "around - around - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "Europe - Europe - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
+      "I - I - POS: PRON, Tag: PRON, Dependency: nsubj\n",
+      "really - really - POS: ADV, Tag: ADV, Dependency: advmod\n",
+      "missed - miss - POS: VERB, Tag: VERB, Dependency: ROOT\n",
+      "Football - Football - POS: PROPN, Tag: PROPN, Dependency: compound\n",
+      "season - season - POS: NOUN, Tag: NOUN, Dependency: dobj\n",
+      "at - at - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "Notre - Notre - POS: PROPN, Tag: PROPN, Dependency: compound\n",
+      "Dame - Dame - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
       "London: GPE (Countries, cities, states)\n",
       "Europe: LOC (Non-GPE locations, mountain ranges, bodies of water)\n",
       "Notre Dame: FAC (Buildings, airports, highways, bridges, etc.)\n"
@@ -319,46 +328,48 @@
     "text = \"Despite loving my semester abroad in London and the opportunity to travel around Europe I really missed Football season at Notre Dame\"\n",
     "doc = nlp(text)\n",
     "\n",
-    "\n",
+    "#display POS features of text\n",
+    "#added POS Feature: .token.dep_ shows the syntatic relationship, meaning the relationship between tokens. This was added as chnages made in the specific chnage made between text and text1 (specificaly loving misspeling) might trigger change in this feature\n",
     "for token in doc:\n",
-    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}\", {token.dep_})\n",
+    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}, Dependency: {token.dep_}\")\n",
     "\n",
+    "# Display named entities in the text\n",
     "for ent in doc.ents:\n",
     "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Despite - despite - POS: SCONJ, Tag: SCONJ {'prep'}\n",
-      "lving - lve - POS: VERB, Tag: VERB {'pcomp'}\n",
-      "my - my - POS: PRON, Tag: PRON {'poss'}\n",
-      "time - time - POS: NOUN, Tag: NOUN {'dobj'}\n",
-      "abroad - abroad - POS: ADV, Tag: ADV {'advmod'}\n",
-      "in - in - POS: ADP, Tag: ADP {'prep'}\n",
-      "London - London - POS: PROPN, Tag: PROPN {'pobj'}\n",
-      "and - and - POS: CCONJ, Tag: CCONJ {'cc'}\n",
-      "the - the - POS: DET, Tag: DET {'det'}\n",
-      "opportunity - opportunity - POS: NOUN, Tag: NOUN {'conj'}\n",
-      "to - to - POS: PART, Tag: PART {'aux'}\n",
-      "travel - travel - POS: VERB, Tag: VERB {'acl'}\n",
-      "around - around - POS: ADP, Tag: ADP {'prep'}\n",
-      "Europe - Europe - POS: PROPN, Tag: PROPN {'pobj'}\n",
-      ", - , - POS: PUNCT, Tag: PUNCT {'punct'}\n",
-      "I - I - POS: PRON, Tag: PRON {'nsubj'}\n",
-      "really - really - POS: ADV, Tag: ADV {'advmod'}\n",
-      "missed - miss - POS: VERB, Tag: VERB {'ROOT'}\n",
-      "Football - Football - POS: PROPN, Tag: PROPN {'compound'}\n",
-      "season - season - POS: NOUN, Tag: NOUN {'dobj'}\n",
-      "at - at - POS: ADP, Tag: ADP {'prep'}\n",
-      "Notre - Notre - POS: PROPN, Tag: PROPN {'compound'}\n",
-      "Dame - Dame - POS: PROPN, Tag: PROPN {'pobj'}\n",
+      "Despite - despite - POS: SCONJ, Tag: SCONJ, Dependency: prep\n",
+      "lving - lve - POS: VERB, Tag: VERB, Dependency: pcomp\n",
+      "my - my - POS: PRON, Tag: PRON, Dependency: poss\n",
+      "time - time - POS: NOUN, Tag: NOUN, Dependency: dobj\n",
+      "abroad - abroad - POS: ADV, Tag: ADV, Dependency: advmod\n",
+      "in - in - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "London - London - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
+      "and - and - POS: CCONJ, Tag: CCONJ, Dependency: cc\n",
+      "the - the - POS: DET, Tag: DET, Dependency: det\n",
+      "opportunity - opportunity - POS: NOUN, Tag: NOUN, Dependency: conj\n",
+      "to - to - POS: PART, Tag: PART, Dependency: aux\n",
+      "travel - travel - POS: VERB, Tag: VERB, Dependency: acl\n",
+      "around - around - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "Europe - Europe - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
+      ", - , - POS: PUNCT, Tag: PUNCT, Dependency: punct\n",
+      "I - I - POS: PRON, Tag: PRON, Dependency: nsubj\n",
+      "really - really - POS: ADV, Tag: ADV, Dependency: advmod\n",
+      "missed - miss - POS: VERB, Tag: VERB, Dependency: ROOT\n",
+      "Football - Football - POS: PROPN, Tag: PROPN, Dependency: compound\n",
+      "season - season - POS: NOUN, Tag: NOUN, Dependency: dobj\n",
+      "at - at - POS: ADP, Tag: ADP, Dependency: prep\n",
+      "Notre - Notre - POS: PROPN, Tag: PROPN, Dependency: compound\n",
+      "Dame - Dame - POS: PROPN, Tag: PROPN, Dependency: pobj\n",
       "London: GPE (Countries, cities, states)\n",
       "Europe: LOC (Non-GPE locations, mountain ranges, bodies of water)\n",
       "Notre Dame: FAC (Buildings, airports, highways, bridges, etc.)\n"
@@ -372,7 +383,7 @@
     "doc1 = nlp(text1)\n",
     "\n",
     "for token in doc1:\n",
-    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}\", {token.dep_})\n",
+    "    print(f\"{token.text} - {token.lemma_} - POS: {token.pos_}, Tag: {token.pos_}, Dependency: {token.dep_}\")\n",
     "\n",
     "for ent in doc1.ents:\n",
     "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\")\n"
@@ -454,11 +465,13 @@
    ],
    "source": [
     "#Comparison\n",
+    "\n",
+    "# Render the named entities of original text (doc)\n",
     "print(\"Original Text:\")\n",
     "from spacy import displacy\n",
     "displacy.render(doc, style='ent', jupyter=True)\n",
     "\n",
-    "\n",
+    "# Render the named entities of altered text (doc1)\n",
     "print(\"Altered Text:\")\n",
     "from spacy import displacy\n",
     "displacy.render(doc1, style='ent', jupyter=True)\n"
