add title to the makdown

--- a/Computing II/Homework/Homework 7.ipynb
+++ b/Computing II/Homework/Homework 7.ipynb
@@ -1,11 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Homework 7\n",
+    "### Due Date: 03/31/25\n",
+    "- Using the knowledge gained from the lecture and the reading, complete the following tasks in Python. Ensure you have spaCy installed and the en_core_web_sm language model downloaded."
+   ]
   },
   {
    "cell_type": "code",
@@ -251,9 +253,9 @@
     "tokens= [token.text for token in doc] #this puts it in a list \n",
     "\n",
     "# Display named entities in the text\n",
-    "# doc.ents contains only the named entities This ensures we are not looping through all tokens, just the recognized entities\n",
+    "# doc.ents contains only the named entities This ensures we are not looping through all tokens, just the recognized entities.\n",
     "for ent in doc.ents: \n",
-    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\") ## Print each entity's text, label, and explanation of the label\n",
+    "    print(f\"{ent.text}: {ent.label_} ({spacy.explain(ent.label_)})\") # Print each entity's text, label, and explanation of the label\n",
     "\n",
     "#Better Presentation using Displacy\n",
     "from spacy import displacy\n",
