additionaly comments on homework 8

--- a/Computing II/Homework/Homework 8.ipynb
+++ b/Computing II/Homework/Homework 8.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Homework 8: Build an EntityRuler in spaCy for Companies and Stocks\n",
+    "# Homework 8\n",
+    "## Build an EntityRuler in spaCy for Companies and Stocks\n",
     "### Due Date: 04/07/25\n",
     "- **Objective:** Students will use spaCy's EntityRuler to create and apply rules for extracting entities representing companies and stock symbols from a pandas DataFrame."
    ]
@@ -64,7 +65,7 @@
       "Requirement already satisfied: marisa-trie>=1.1.0 in /opt/anaconda3/lib/python3.12/site-packages (from language-data>=1.2->langcodes<4.0.0,>=3.2.0->spacy) (1.2.1)\n",
       "Collecting en-core-web-sm==3.8.0\n",
       "  Downloading https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl (12.8 MB)\n",
-      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m11.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.8/12.8 MB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
       "\u001b[?25h\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
       "You can now load the package via spacy.load('en_core_web_sm')\n"
      ]
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "4   AADI        Aadi Bioscience                 Pharmaceuticals   104.85M"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +194,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>CompanyName</th>\n",
+       "      <th>Industry</th>\n",
+       "      <th>MarketCap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5879</td>\n",
+       "      <td>5879</td>\n",
+       "      <td>5870</td>\n",
+       "      <td>5879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>5879</td>\n",
+       "      <td>5830</td>\n",
+       "      <td>177</td>\n",
+       "      <td>4428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>A</td>\n",
+       "      <td>Liberty Global</td>\n",
+       "      <td>Biotechnology</td>\n",
+       "      <td>1.04B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>644</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Symbol     CompanyName       Industry MarketCap\n",
+       "count    5879            5879           5870      5879\n",
+       "unique   5879            5830            177      4428\n",
+       "top         A  Liberty Global  Biotechnology     1.04B\n",
+       "freq        1               3            644        16"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Investigate Dataset\n",
+    "stocks.describe()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -206,14 +290,12 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Investigate Dataset\n",
-    "stocks.describe()\n",
     "\n",
     "#Check for any missing Values\n",
     "stocks.isna().sum()"
@@ -233,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -246,17 +328,18 @@
    ],
    "source": [
     "# Extract unique company names and stock symbols\n",
-    "unique_companies = stocks['CompanyName'].dropna().unique()\n",
-    "unique_symbols = stocks['Symbol'].dropna().unique()\n",
+    "# No need for dropna () as above test showed no nulls for companies or symbols\n",
+    "companies = stocks['CompanyName'].unique()\n",
+    "symbols = stocks['Symbol'].unique()\n",
     "\n",
     "# Create patterns for company names\n",
     "company_patterns = []\n",
-    "for name in unique_companies:\n",
+    "for name in companies:\n",
     "    company_patterns.append({\"label\": \"COMPANY\", \"pattern\": name})\n",
     "\n",
     "# Create patterns for stock symbols\n",
     "symbol_patterns = []\n",
-    "for symbol in unique_symbols:\n",
+    "for symbol in symbols:\n",
     "    symbol_patterns.append({\"label\": \"STOCK_SYMBOL\", \"pattern\": symbol})\n",
     "\n",
     "#Combine both patterns\n",
@@ -275,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -289,23 +372,23 @@
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x1281d3c50>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x1281d3710>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x1283651c0>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x12c31d550>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x12c31c470>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x12c358890>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x1285cc0d0>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x1285bacd0>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x16b1571d0>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x1283652a0>)]"
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x12c5f4750>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x12c5e49d0>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x16a840610>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x12c3589e0>)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check if the \"ner\" pipe exists. If it does, add the EntityRuler before it.\n",
+    "# Check if the \"ner\" pipe exists. If it does, add the EntityRuler before it. This is so the custome label for companies and stock symbols are recognized before.\n",
     "if \"ner\" in nlp.pipe_names:\n",
     "    # If entity_ruler already exists, simply add patterns to it.\n",
     "    try:\n",
@@ -344,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +524,6 @@
     }
    ],
    "source": [
-    "#SHOULD I ADD A PATTERN FOR INDUSTRY\n",
     "#Relevant Library\n",
     "from spacy import displacy\n",
     "\n",
@@ -452,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -656,6 +738,13 @@
     "#Test Paragraph 3\n",
     "paragraph_3= nlp(\"On a mixed trading day, Par Pacific Holdings (PARR) saw its stock rise by 1.5%, fueled by optimistic forecasts in the Oil, Gas & Consumable Fuels sector. In contrast, Nano Dimension (NNDM) faced a decline of 2.3% following its announcement of increased costs related to supply chain disruptions.Meanwhile, Beyond Meat (BYND) gained 0.8% after strong quarterly earnings, outperforming its peers in the Food Products space. Apollo Investment (AINV) also recorded a modest increase of 0.5%, reflecting investors' confidence in its ability to navigate challenges in the Capital Markets industry.\")\n",
     "displacy.render(paragraph_3, style=\"ent\", jupyter=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entities are correctly identified by EntityRuler for all 3 paragraphs tested. Additionaly, the pattern applied prior to NER pipe pick us correctly on company names and labels them as companies, while picking up on symbols and labeling them as stocks_symbols. Other entities,like dates, industries and percentages are picked up by the NER pipeline and fixed conventions are applyied. This may hinder model interpretation in the duture, yet we generaly see that there are no major issues with the information picked up by the EntityRuler that was employed in this case."
    ]
   }
  ],
